--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,6 @@ jobs:
       uses: solybum/hexo-deploy@master
       env:
         PERSONAL_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        PUBLISH_REPOSITORY: qq9694526/blog # The repository the action should deploy to.
+        PUBLISH_REPOSITORY: shen-shi-wei/blog # The repository the action should deploy to.
         BRANCH: blog  # The branch the action should deploy to.
         PUBLISH_DIR: ./public # The folder the action should deploy.
